Refactor two tasks